Auto-generation of views, done. Models, almost

--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -25,14 +25,14 @@
       }
  
       .login-form {
-        margin-left: 60px;
+        margin-left: 70px;
         width: 300px;
       }
 
       form {
         margin-top: 10px;
       }
- 
+
       legend {
         margin-right: -50px;
         font-weight: bold;
@@ -62,7 +62,7 @@
                                 <input type="password" name="password" id="password" placeholder="Password">
                             </div>
                             <div class="clearfix">
-                              <button class="btn btn-info" namne="login" type="submit">Sign in</button>
+                              <button class="btn btn-inverse" namne="login" type="submit">Sign in <i class="icon-arrow-right icon-white"></i></button>
                             </div>
                         </fieldset>
                     </form>
