--- a/admin/templates/common/module-data.html
+++ b/admin/templates/common/module-data.html
@@ -260,7 +260,7 @@
         <div class="modal fade hide" id="run">
           <div class="modal-header">
             <a class="close" data-dismiss="modal">×</a>
-            <h3>Fetch results</h3>
+            <h3>Results</h3>
           </div>
           <div class="modal-body"></div>
           <div class="modal-footer">
