Improved IP whitelist checking

--- a/admin/templates/common/footer.html
+++ b/admin/templates/common/footer.html
@@ -3,6 +3,7 @@
       <hr>
 
       <footer>
+        <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i></a></p>
         <p>&copy; Chuck Norris {{ "now"|date("Y") }}</p>
       </footer>
 
