--- a/admin/templates/common/module-edit.html
+++ b/admin/templates/common/module-edit.html
@@ -206,7 +206,7 @@
                         <span class="label label-info{% if field.isimage %} showmodal2{% endif %}">Current file: {{ field.value }}{% if field.isimage %} <i class="icon-zoom-in icon-white"></i>{% endif %}</span>
                         <br />
                         <label class="checkbox inline">
-                          <input type="checkbox" name="removeimages[{{ module }}][{{ fields.id }}][{{ key }}]" value="{{ field.value }}"> Remove current file?
+                          <input type="checkbox" name="removeimages[{{ module }}][{{ fields.id }}][{{ key }}]" value="{{ field.value }}"> Remove current {% if field.isimage %}image{% else %}file{% endif %}?
                         </label>
                       </div>
                     </div>
