--- a/admin/templates/common/header.html
+++ b/admin/templates/common/header.html
@@ -70,7 +70,7 @@
           theme_advanced_styles : "Paragraph=p;Header 1=h2;Header 2=h3;Header 3=h4",
 
           // Theme options
-          theme_advanced_buttons1 : "styleselect,bold,italic,underline,strikethrough,|,bullist,numlist,|,undo,redo,|,link,unlink,|,charmap,fullscreen,|,pastetext,pasteword",
+          theme_advanced_buttons1 : "styleselect,bold,italic,underline,strikethrough,|,bullist,numlist,|,undo,redo,|,link,unlink,|,code,charmap,fullscreen,|,pastetext,pasteword",
           theme_advanced_buttons2 : "",
           theme_advanced_buttons3 : "",
           theme_advanced_buttons4 : "",
