Back up view and downloading feature added

--- a/admin/templates/backup.html
+++ b/admin/templates/backup.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 {% include "common/nav.html" %}
-{% include "common/careerenquiries.html" %}
+{% include "common/backup.html" %}
 {% endblock %}
