Updated to include sitename and cms information

--- a/admin/templates/common/footer.html
+++ b/admin/templates/common/footer.html
@@ -4,8 +4,29 @@
 
       <footer>
         <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i></a></p>
-        <p>&copy; Chuck Norris {{ "now"|date("Y") }}</p>
+        <p>&copy; {{ sitename }} {{ "now"|date("Y") }}</p>
       </footer>
+
+      <div class="modal fade hide" id="credits">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h3>&nbsp;</h3>
+        </div>
+        <div class="modal-body">
+          <p class="lead">{{ cms.name }} <small>v{{ cms.version }}</small> built by <a href="http://www.studiomohu.com" target="_blank">Studio Mohu</a></p>
+          <p>With thanks to the following open source softwares:</p>
+          <table class="table table-bordered span5">
+            <tbody>
+              {% for dependancy, version in cms.dependancies %}
+              <tr>
+                <td>{{ dependancy }}</td>
+                <td>v{{ version }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
 
     </div><!--/.fluid-container-->
 
