--- a/admin/templates/common/header.html
+++ b/admin/templates/common/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chuck Norris</title>
+    <title>{{ sitename }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -100,6 +100,10 @@
       if ({% if module %}true{% else %}false{% endif %}) {
         $('ul.nav-list li.{{ module }}').addClass('active');
       }
+      $(".credits").on("click", function(e) {
+        e.preventDefault();
+        $('#credits').modal('show');
+      });
     });
     </script>
 
