--- a/admin/templates/admin.html
+++ b/admin/templates/admin.html
@@ -4,8 +4,10 @@
 {% include "common/nav.html" %}
         <div class="span9">
           <div class="hero-unit">
-            <!--<img src="/apple-touch-icon-57x57-precomposed.png" style="float: left; margin: 10px 0px 0px -25px;">-->
-            <h1>Chuck Norris <small>Dashboard</small></h1>
+            {% if appletouchicon %}
+            <img src="/apple-touch-icon-57x57-precomposed.png" style="float: left; margin: 3px 5px 0px -25px;">
+            {% endif %}
+            <h1>{{ sitename }} <small>Dashboard</small></h1>
           </div>
           <div class="row-fluid">
             <div class="span4 well">
