--- a/admin/templates/common/nav.html
+++ b/admin/templates/common/nav.html
@@ -6,13 +6,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/admin">Chuck Norris</a>
+          <a class="brand" href="/admin">{{ sitename }}</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/admin">cPanel</a></li>
               <li><a href="/admin/settings">Settings</a></li>
             </ul>
             <ul class="nav pull-right">
+              <li><a href="#" class="credits">Credits</a></li>
               <li><a href="/" target="_blank">Preview</a></li>
               <li class="dropdown" id="menu1">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Logout {{ session.user }}? <b class="caret"></b></a>
