--- a/admin/templates/common/settings.html
+++ b/admin/templates/common/settings.html
@@ -15,9 +15,17 @@
               </div>
 
               <div class="control-group">
-                <label class="control-label" for="pagination">Pagination</label>               
+                <label class="control-label" for="sitename">Site name</label>
                 <div class="controls">
-                  
+                  <input type="text" id="sitename" class="input-xlarge" name="settings[sitename]" value="{{ settings.sitename.value }}">
+                </div>
+              </div>
+
+
+              <div class="control-group">
+                <label class="control-label" for="pagination">Pagination</label>
+                <div class="controls">
+
                   <select id="pagination" class="input-xlarge" name="settings[pagination]">
                     {% for key, value in settings.pagination.values %}
                     <option value="{{ value }}"{% if value == settings.pagination.value %} selected{% endif %}>{{ key }}</option>
